# GameIO

./: .gitignore  CMakeLists.txt  GameIOConfig.cmake  README.md
cmake/: Utils.cmake
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt
examples/ball/: App.qml  Ball.qml  CMakeLists.txt  main.cpp  resources.qrc
monitor/: CMakeLists.txt  gamepadlogger.cpp  gamepadlogger.h  gamepadwidget.cpp  gamepadwidget.h  gamepadwidget.ui  main.cpp  res.qrc
src/: CMakeLists.txt
src/core/: CMakeLists.txt  config.h.in  gameio_res.qrc  gamepad.cpp  gamepad.h  gamepad_p.h  gamepadmanager.cpp  gamepadmanager.h  gamepadmanager_p.h  global.h
src/import/: CMakeLists.txt  gamepad.cpp  gamepad.h  gamepadmanager.cpp  gamepadmanager.h  plugin.cpp
src/lib/: CMakeLists.txt  config.h  config.h.in  debug.cpp  debug_p.h  gameio.h  gameio_res.qrc  gamepad.cpp  gamepad.h  gamepad_p.h  gamepadmanager.cpp  gamepadmanager.h  gamepadmanager_p.h  global.h
src/lib/configs/: gamecontrollerdb_linux.txt
test/: CMakeLists.txt  gamepadtest.cpp
test/core/: CMakeLists.txt  gamepadtest.h
tests/: CMakeLists.txt  main.cpp
